// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupTitle renders with no subtitle when \`type = default\` 1`] = `
<EventOrGroupTitle
  data={
    Object {
      "culprit": "culprit",
      "metadata": Object {
        "directive": "metadata directive",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
      },
      "type": "default",
    }
  }
>
  <span>
    <GuideAnchor
      disabled={true}
      position="bottom"
      target="issue_title"
    >
      metadata title
    </GuideAnchor>
  </span>
</EventOrGroupTitle>
`;

exports[`EventOrGroupTitle renders with subtitle when \`type = csp\` 1`] = `
<EventOrGroupTitle
  data={
    Object {
      "culprit": "culprit",
      "metadata": Object {
        "directive": "metadata directive",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
      },
      "type": "csp",
    }
  }
>
  <span>
    <GuideAnchor
      disabled={true}
      position="bottom"
      target="issue_title"
    >
      <span>
        metadata directive
      </span>
    </GuideAnchor>
    <Spacer>
      <span
        style={
          Object {
            "display": "inline-block",
            "width": 10,
          }
        }
      >
         
      </span>
    </Spacer>
    <em
      title="metadata uri"
    >
      metadata uri
    </em>
    <br />
  </span>
</EventOrGroupTitle>
`;

exports[`EventOrGroupTitle renders with subtitle when \`type = error\` 1`] = `
<EventOrGroupTitle
  data={
    Object {
      "culprit": "culprit",
      "metadata": Object {
        "directive": "metadata directive",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
      },
      "type": "error",
    }
  }
>
  <span>
    <GuideAnchor
      disabled={true}
      position="bottom"
      target="issue_title"
    >
      <span>
        metadata type
      </span>
    </GuideAnchor>
    <Spacer>
      <span
        style={
          Object {
            "display": "inline-block",
            "width": 10,
          }
        }
      >
         
      </span>
    </Spacer>
    <em
      title="culprit"
    >
      culprit
    </em>
    <br />
  </span>
</EventOrGroupTitle>
`;
